fix: scrollbar on animation

--- a/css/style.css
+++ b/css/style.css
@@ -82,11 +82,13 @@ nav{
     background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" fill="%232F2F2F"><path d="M0 1v99c134.3 0 153.7-99 296-99H0Z" opacity=".5"></path><path d="M1000 4v86C833.3 90 833.3 3.6 666.7 3.6S500 90 333.3 90 166.7 4 0 4h1000Z" opacity=".5"></path><path d="M617 1v86C372 119 384 1 196 1h421Z" opacity=".5"></path><path d="M1000 0H0v52C62.5 28 125 4 250 4c250 0 250 96 500 96 125 0 187.5-24 250-48V0Z"></path></svg>');
     background-repeat: no-repeat;
     color: white;
+    overflow: hidden;
 }
 
 .text {
     align-self: end;
     margin-bottom: 15vh;
+    
     p {
         font-size: 2rem;
         color: var(--bgSombra);
@@ -99,7 +101,7 @@ nav{
         color: white;
         font-family: "El Messiri", sans-serif;
         animation: backInLeft 1.5s 2s;
-
+        
         span {
             color: var(--amareloJJ);
             font-size: inherit;
@@ -144,7 +146,7 @@ a {
 
 /* introdução */
 #intro {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100vh;
     background-color: #000000;
